<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnTes1"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:fontFamily="@font/nunito_bold"
            android:textSize="14sp"
            android:background="@drawable/bg_button"
            android:text="@string/jawaban_code_tes_i"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/btnTes2"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:fontFamily="@font/nunito_bold"
            android:textSize="14sp"
            android:background="@drawable/bg_button"
            android:text="@string/jawaban_code_test_ii"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/btnTes3"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:fontFamily="@font/nunito_bold"
            android:textSize="14sp"
            android:background="@drawable/bg_button"
            android:text="@string/jawaban_code_test_iii"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>