<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".codetest3.DesignActivity">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="4dp"
        android:layout_centerInParent="true"
        android:layout_width="150dp"
        android:layout_height="180dp">

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/cnn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:fontFamily="@font/nunito"
                android:layout_marginStart="5dp"
                android:text="@string/cnn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:fontFamily="@font/nunito"
                android:layout_marginStart="5dp"
                android:text="@string/cnn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RatingBar
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="start"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:scaleX=".5"
                    android:rating="4"
                    android:scaleY=".5"
                    android:transformPivotX="0dp"
                    android:transformPivotY="0dp"
                    android:max="5"/>

            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>